Changes for 1.5
* Disabled political action button when taking actions, to prevent taking multiple actions while waiting for confirmation of the first. (veqryn)

* Fixed major error preventing politics from working over the network, due to the new way condition testing works. (veqryn)

* Fixed Lock not held errors for politics. (veqryn)

* Changed political panel to use a split panel, and added the one-touch-expandable feature to all main game screen panels: map panel, chat panel, and history panel. (veqryn)

* Added scroll bars to main screen player selection area. (frigoref)

* Created option to have TripleA not parse every single xml at startup, and only parse as each game is selected. (veqryn & frigoref)

* Added new button to main screen, Engine Preferences, which lets a user select various properties specific to the the triplea engine, like setting the look and feel, etc. (veqryn)

* Added scroll bars to both political overview and political action screens. (veqryn)

* Fixed serious bug in DefaultAttachment.getRawProperty() and getFieldIncludingFromSuperClasses, and also updated attachment/annotation test to search super's fields. (veqryn) 

* Making some small fixes to attachment/annotation test, and renaming any methods with attatch to attach. (veqryn)

* Added wait window to TripleA's startup. (frigoref)

* Changed name of Dynamix to be Land-Only AI, at least until someone decides to start working on the AI again. (veqryn)

* Completely updated the game xml exporter to TripleA 1.5, except that attachments are just copies of what was parsed from the xml originally. (veqryn)

* Fixed null pointer error in Bid Placement when undoing a placement. (veqryn)

* Created new Player Attachment property, stackingLimit, which allows stacking limits to be enforced flexibly per player, with multiple rules allowed for owned, allied, and total units. (veqryn)
