@@ -182,12 +182,6 @@ public class TerritoryEffectAttachment extends DefaultAttachment
 	}
 	
 	@Override
-	public String toString()
-	{
-		return this.getName();
-	}
-	
-	@Override
 	public void validate(final GameData data) throws GameParseException
 	{
 		// TODO Auto-generated method stub
